--- a/src/app/component/search-address/search-address.component.html
+++ b/src/app/component/search-address/search-address.component.html
@@ -5,7 +5,13 @@
   <form action="">
     <div>
       <label for="">Cep:</label>
-      <input type="text" />
+      <input
+        type="text"
+        [(ngModel)]="cep"
+        name="cep"
+        (change)="getData()"
+        maxlength="8"
+      />
     </div>
     <div>
       <label for="">Rua:</label>
