--- a/src/app/component/search-address/search-address.component.scss
+++ b/src/app/component/search-address/search-address.component.scss
@@ -13,6 +13,10 @@ main {
     box-shadow: var(--box-shadow);
     padding: 30px;
 
+    .alert {
+      color: var(--color-alert);
+    }
+
     form {
       display: flex;
       flex-direction: column;
