--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,8 @@
   --color-dark: #141414;
 
   --color-grey: #eee;
+  --color-alert: #ff0000;
+
   --box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 
   --color-primary: #007bff;
