--- a/src/app/component/footer/footer.component.scss
+++ b/src/app/component/footer/footer.component.scss
@@ -4,7 +4,7 @@ footer {
   align-items: center;
   height: 70px;
   position: absolute;
-  background-color: var(--color-dark);
+  background-color: var(--dark-blue);
   color: var(--color-white);
   width: 100%;
 }
