--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -1,9 +1,12 @@
 header {
   display: flex;
   align-items: center;
-  height: 70px;
+  justify-content: center;
+  height: 100px;
   position: absolute;
-  background-color: var(--color-dark);
+  background-color: var(--color-primary);
   color: var(--color-white);
   width: 100%;
+  border-bottom: 5px solid black;
+  border-radius: 0px 100px 0px 100px;
 }
