--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@
 
   --box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 
-  --color-primary: #007bff;
+  --color-primary: #779fc9;
 }
 
 * {
@@ -18,4 +18,12 @@
   padding: 0;
   box-sizing: border-box;
   font-family: var(--font-family);
+}
+
+button {
+  padding: 5px 15px 5px 15px;
+  background-color: var(--color-dark);
+  color: var(--color-grey);
+  font-weight: bold;
+  border-radius: 5px;
 }
